# AoC-2024

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
src/: allocation_track.rs  main.rs  staging_tracking_allocator.rs
src/problems/: commons.rs  day1.rs  day10.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day7_test.txt  day8.rs  day9.rs  mod.rs
