[package]
name = "aoc-2024-megaproject"
version = "0.1.0"
edition = "2021"

[profile.release-debug]
inherits = "release"
debug = true

[dependencies]
ahash = "0.8.12"
ascii = "1.1.0"
num-integer = "0.1.46"
num_cpus = "1.17.0"
rayon = "1.10.0"
regex = "1.11.1"
size = "0.5.0"
tinyvec = { version = "1.9.0", features = ["alloc"]}
